--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@radix-ui/react-tooltip": "^1.1.6",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "lodash": "^4.17.21",
         "lucide-react": "^0.469.0",
         "next-themes": "^0.4.4",
         "react-icons": "^5.4.0",
