--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
         "@radix-ui/react-select": "^2.1.4",
         "@radix-ui/react-slot": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.1.6",
+        "chart.js": "^4.4.7",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lodash": "^4.17.21",
         "lucide-react": "^0.469.0",
         "next-themes": "^0.4.4",
+        "react-chartjs-2": "^5.3.0",
         "react-icons": "^5.4.0",
         "sonner": "^1.7.1",
         "tailwind-merge": "^2.6.0",
